<resources>
    <string name="app_name">Kotlin</string>
    <string name="string_login">Login</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_question_have_account">Already have an Account?</string>
    <string name="string_register">New user? Register now</string>
    <string name="string_use_others">Use other Methods</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="wrong_mail_or_password">Wrong Email or Password</string>
    <string name="Cars">Cars</string>
    <string name="pirates">Pirates</string>
    <string name="spider_man">Spider Man</string>
    <string name="train">Train</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="more">More</string>
    <string name="amount">Amount:</string>
    <string name="select_all">Select All</string>
    <string name="buy">Buy</string>
    <string name="do_you_want_to_remove_this_item">Do you want to remove this item ?</string>
    <string name="do_you_want_to_remove_all_item">Do you want to remove all item ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_confirm_payment_this_order">Are you sure confirm payment this order ?</string>
    <string name="empty_cart_back_to_store">Empty cart. Back to store</string>
    <string name="shopping">Shopping</string>
    <string name="authentication_success">Authentication Success</string>
    <string name="ok">OK</string>
    <string name="not_enough_money">Not enough money</string>
    <string name="purchase_success">Purchase Success</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_history">History</string>
    <string name="title_user">Account</string>
    <string name="name">Name: </string>
    <string name="date_of_birth">Date Of Birth: </string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="pick_image_from_gallery">Pick image from gallery</string>
    <string name="search">Search ...</string>
    <string name="detail_lego">Detail Lego</string>
    <string name="cart">Cart</string>
    <string name="no_favorite">No Favorite</string>
    <string name="filter">Filter</string>
    <string name="cash">Cash</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="submit">submit</string>
    <string name="no_order_history">No order history</string>
    <string name="location">Location</string>
    <string name="country">Country: </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="characters_pw_hint">8-12 characters</string>
    <string name="transfer">Transfer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_card">Use Card</string>
    <string name="use_point">Use Point</string>
    <string name="confirm">confirm</string>
    <string name="choose_money_transfer">Choose money transfer</string>
    <string name="edit_information">Edit Information</string>
    <string name="search_lego">Search lego</string>
    <string name="remove_filter">Remove Filter</string>
    <string name="chat_bot">Chatbot</string>
    <string name="input_question_here">Input question here</string>
    <string name="evaluate_the_quality_of_this_product">Evaluate the quality of product</string>
    <string name="name_history_detail">Name</string>
    <string name="amount_history_detail">Amount</string>
    <string name="price">Price</string>
    <string name="total_price">Total price</string>
    <string name="history_detail">History Detail</string>
    <string name="feed_back">Feedback</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="forgot_password">Forgot password</string>
</resources>
