<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/menu_transfer"
        android:icon="@drawable/ic_dollar"
        android:title="@string/transfer" />

    <item
        android:id="@+id/menu_user"
        android:icon="@drawable/ic_user"
        android:title="@string/title_user" />
</menu>
