<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            app:navigationIcon="@drawable/ic_filter"
            android:layout_height="wrap_content"
            android:background="@color/color_text_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:elevation="@dimen/dp_4"
            android:tint="@color/color_text_blue"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/textSearch"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/imageCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@drawable/ic_shopping_cart"
            android:tint="@color/color_white"
            android:paddingStart="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toStartOf="@id/imageChatBot"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageChatBot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@drawable/ic_message"
            android:background="@android:color/transparent"
            android:tint="@color/color_white"
            android:padding="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNotificationHome"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/bg_circle"
            android:textAlignment="center"
            android:visibility="invisible"
            android:textSize="@dimen/sp_11"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@id/imageCart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:layout_marginStart="@dimen/dp_58"
            android:paddingEnd="@dimen/dp_8"
            app:layout_constraintBottom_toBottomOf="@id/imageSearch"
            app:layout_constraintEnd_toStartOf="@id/imageCart"
            android:paddingStart="@dimen/dp_40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageSearch" />

        <ProgressBar
            android:id="@+id/progressLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/dp_8"
            android:foreground="@android:color/transparent"
            android:indeterminateTint="@color/color_text_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:context=".screen.home.HomeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textMoreCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:text="@string/more"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintBottom_toTopOf="@id/recyclerLegoCars"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textMoreTrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:text="@string/more"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintBottom_toTopOf="@id/recyclerLegoTrains"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textMorePirate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:text="@string/more"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintBottom_toTopOf="@id/recyclerLegoPirates"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textMoreSpiderMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:text="@string/more"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/sp_10"
                    app:layout_constraintBottom_toTopOf="@id/recyclerSpiderMans"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textCars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/Cars"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLegoCars"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_160"
                    android:layout_marginTop="@dimen/dp_16"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/dp_32"
                    android:paddingEnd="@dimen/dp_32"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textCars" />

                <TextView
                    android:id="@+id/textPirates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_32"
                    android:text="@string/pirates"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerLegoCars" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLegoPirates"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_160"
                    android:layout_marginTop="@dimen/dp_16"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/dp_32"
                    android:paddingEnd="@dimen/dp_32"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPirates" />

                <TextView
                    android:id="@+id/textSpiderMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_32"
                    android:text="@string/spider_man"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerLegoPirates" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerSpiderMans"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_160"
                    android:layout_marginTop="@dimen/dp_16"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/dp_32"
                    android:paddingEnd="@dimen/dp_32"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textSpiderMan" />

                <TextView
                    android:id="@+id/textTrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_32"
                    android:text="@string/train"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerSpiderMans" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLegoTrains"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_160"
                    android:layout_marginTop="@dimen/dp_16"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/dp_32"
                    android:paddingEnd="@dimen/dp_32"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTrain" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
